<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nVx-qX-9b9">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14081.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Events-->
        <scene sceneID="snY-MW-7C9">
            <objects>
                <viewController title="Events" id="lcq-jv-yKf" customClass="EventTabViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Mf8-MQ-F0y">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="zct-l9-FgV"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Events" image="list" id="814-bf-6ze">
                        <color key="badgeColor" red="0.9568462968" green="0.57094234229999996" blue="0.0061058429999999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="duk-JA-k50" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1754" y="770"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="yEV-7N-bqT">
            <objects>
                <tabBarController id="nVx-qX-9b9" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zab-Q6-03w">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="selectedImageTintColor" red="0.9568462968" green="0.57094234229999996" blue="0.0061058429999999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="lcq-jv-yKf" kind="relationship" relationship="viewControllers" id="D50-Tm-OVL"/>
                        <segue destination="5KN-Yi-qeb" kind="relationship" relationship="viewControllers" id="Fuo-CT-SwO"/>
                        <segue destination="g9i-54-Ho1" kind="relationship" relationship="viewControllers" id="ILV-s3-DTB"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gPi-Og-ifm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2996" y="1158"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="lPO-Zj-59s">
            <objects>
                <navigationController storyboardIdentifier="eventDetailNav" id="FpH-KY-O2Q" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="EnY-kj-cTN">
                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7ef-Vb-z1V" kind="relationship" relationship="rootViewController" id="5IA-db-lTS"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Zug-87-5mG" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1027" y="770"/>
        </scene>
        <!--Event Feed View Controller-->
        <scene sceneID="G1t-NQ-as3">
            <objects>
                <viewController storyboardIdentifier="eventDetail" id="7ef-Vb-z1V" customClass="EventFeedViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="n9G-0N-cx7">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jFj-pC-CuC">
                                <rect key="frame" x="0.0" y="116" width="375" height="551"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="dataSource" destination="7ef-Vb-z1V" id="j7C-jt-ERn"/>
                                    <outlet property="delegate" destination="7ef-Vb-z1V" id="tXl-yl-v89"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="8VV-hO-mFP" firstAttribute="trailing" secondItem="jFj-pC-CuC" secondAttribute="trailing" id="RRy-r4-TRF"/>
                            <constraint firstItem="jFj-pC-CuC" firstAttribute="centerX" secondItem="8VV-hO-mFP" secondAttribute="centerX" id="Xoo-Ry-bcQ"/>
                            <constraint firstItem="jFj-pC-CuC" firstAttribute="centerY" secondItem="8VV-hO-mFP" secondAttribute="centerY" id="a8q-mb-8bm"/>
                            <constraint firstItem="8VV-hO-mFP" firstAttribute="bottom" secondItem="jFj-pC-CuC" secondAttribute="bottom" id="akf-rQ-HbN"/>
                            <constraint firstItem="jFj-pC-CuC" firstAttribute="leading" secondItem="8VV-hO-mFP" secondAttribute="leading" id="mj9-Ok-XwX"/>
                            <constraint firstItem="jFj-pC-CuC" firstAttribute="top" secondItem="8VV-hO-mFP" secondAttribute="top" id="y4H-M0-fTO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="8VV-hO-mFP"/>
                    </view>
                    <navigationItem key="navigationItem" id="31V-f7-XTh"/>
                    <connections>
                        <outlet property="feedTableView" destination="jFj-pC-CuC" id="ySz-Xp-hYU"/>
                        <segue destination="eHf-jy-mbl" kind="custom" identifier="eventDetail" customClass="DeckSegue" customModule="DeckTransition" id="Y39-nN-maW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Jqe-Yz-JKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-258.39999999999998" y="769.56521739130437"/>
        </scene>
        <!--EventDetail-->
        <scene sceneID="C4Z-ux-TzN">
            <objects>
                <viewControllerPlaceholder storyboardName="EventDetail" id="eHf-jy-mbl" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4KP-y2-2KD" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="421" y="769"/>
        </scene>
        <!--Settings-->
        <scene sceneID="BRs-QO-w2L">
            <objects>
                <viewControllerPlaceholder storyboardName="Settings" id="qHJ-Re-czd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="HdJ-3Q-NmD"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lvX-Kb-XEo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-3014" y="1755"/>
        </scene>
        <!--Calendar-->
        <scene sceneID="lM3-q7-yj4">
            <objects>
                <viewControllerPlaceholder storyboardName="Calendar" id="5KN-Yi-qeb" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="ogP-WZ-1pb"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mbI-jy-0DG" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1985" y="1157"/>
        </scene>
        <!--Search-->
        <scene sceneID="wTp-ot-W5r">
            <objects>
                <viewControllerPlaceholder storyboardName="Search" id="g9i-54-Ho1" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="nvW-zI-3Z3"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iVO-mL-ZB2" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1754" y="1684"/>
        </scene>
    </scenes>
    <resources>
        <image name="list" width="19" height="14"/>
    </resources>
</document>
