...
    let nib = UINib(nibName: EventTableViewCell.nibName, bundle: nil)
    let calendarAPI = CalendarAPI()
    let placeholder = EmptyPlaceholder.instanceFromNib()

    lazy var searchController: UISearchController = {
        let searchCon = UISearchController(searchResultsController: nil)
        searchCon.searchBar.placeholder = "Events"
        searchCon.searchResultsUpdater = self
        searchCon.dimsBackgroundDuringPresentation = false
        searchCon.obscuresBackgroundDuringPresentation = false
        return searchCon
    }()

...
        events = calendarAPI.eventsFromSearch(text: query)
        upcomingEvents = calendarAPI.upcomingEventsFrom(events: events)
        pastEvents = calendarAPI.pastEventsFrom(events: events)

        tableView.reloadSections([0, 1], with: .automatic)
        navigationItem.prompt = "Found \(events?.count ?? 0) Results for: \"\(query)\""
        navigationItem.title = "Search"
    }

}

// MARK: - Scroll and Tabbar delegate for dismissing keyboard
extension SearchViewController: UIScrollViewDelegate {
...
