...
//  Copyright © 2018 WM. All rights reserved.
//

import UIKit

class EventDetailViewController: UIViewController {
    @IBOutlet weak var detailTableView: UITableView!
    var event: Event! //やばい

    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = event.title
        self.detailTableView.sectionHeaderHeight = UITableView.automaticDimension
...
